--- a/Web-App/index.html
+++ b/Web-App/index.html
@@ -57,16 +57,22 @@ background-color: white;
     <ul class="list-group m-3">
       <div class="row">
         <div class="col-sm-6">
-          <li class="list-group-item"> <strong>Fecha:</strong> <div id="Fecha"> </div></li>
+          <li class="list-group-item"> <strong>Fecha: </strong> <div id="Fecha"> </div></li>
           <li class="list-group-item"><strong>GUID: </strong> <div id="TestNumero"> </div></li>
-          <li class="list-group-item"><strong>HostName :</strong> <div id="HostName"> </div></li>
-          <li class="list-group-item"><strong>Resultado :</strong> <div id="Resultado"> </div></li>
+          <li class="list-group-item"><strong>HostName: </strong> <div id="HostName"> </div></li>
+          <li class="list-group-item"><strong>Version: </strong> <div id=""> </div></li>
+          <li class="list-group-item"><strong>Camera Mode: </strong> <div id="Resultado"> </div></li>
+          <li class="list-group-item"><strong>Identification Service: </strong> <div id=""> </div></li>
+          <li class="list-group-item"><strong>Between Pictures: </strong> <div id=""> </div></li>
         </div>
         <div class="col-sm-6">
           <li class="list-group-item"><strong>Total de Ciclos: </strong> <div id="TCiclos"> </div></li>
           <li class="list-group-item"><strong>Duracion por Ciclo: </strong> <div id="DCiclo"> </div></li>
-          <li class="list-group-item"><strong>Descripcion: </strong><div id="Descripcion"> </div></li>
+          <li class="list-group-item"><strong>Camaras Conectadas: </strong> <div id=""> </div></li>
+          <li class="list-group-item"><strong>Performace Machine: </strong><div id="Descripcion"> </div></li>
           <li class="list-group-item"><strong>Recurso Utilizado: </strong> <div id="Recurso"> </div></li>
+          <li class="list-group-item"><strong>Descripcion: </strong><div id="Descripcion"> </div></li>
+          <li class="list-group-item"><strong>Resultado :</strong> <div id=""> </div></li>
         </div>
       </div>
      
