api web resumen ciclo

--- a/Web-App/index.html
+++ b/Web-App/index.html
@@ -80,6 +80,25 @@ background-color: white;
   </div>
     </div>
 
+    <h4 align="center">Resumen Test</h4>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">GuidTest</th>
+                <th scope="col">Ciclo</th>
+                <th scope="col">Total Identificacion</th>
+                <th scope="col">Frame Received</th>
+                <th scope="col">Before Processing</th>
+                <th scope="col">Face API Results</th>
+                
+            </tr>
+        </thead>
+        <tbody id="ResumenCiclo">
+            
+        </tbody>
+    </table>
+
     <h4 align="center">Resultado Test "Ciclo 1"</h4>
     <table class="table">
         <thead class="thead-dark">
