--- a/Web-App/Reports.html
+++ b/Web-App/Reports.html
@@ -127,9 +127,9 @@
                   <th scope="col">Cpu Avg</th>
                   <th scope="col">Ram Avg</th>
                   <th scope="col">Total Error</th>
-                  <th scope="col">Total Json File </th>
-                  <th scope="col"> Json Identification</th>
-                  <th scope="col"> Json Sin Personas</th>
+                  <th scope="col">Json Generados </th>
+                  <th scope="col"> Personas Identificadas in Json</th>
+                  <th scope="col"> Json Sin PersonEngagements</th>
                   
               </tr>
           </thead>
